# libsaliency

./: .autotools  .cproject  .gitignore  .project  AUTHORS  Makefile.am  NEWS  README.md  configure.ac
exampleProgram/: Makefile.am  exampleProgram.cpp
include/: Makefile.am  SaliencyMath.hpp  kernelDensityInfo.hpp  libsaliency.hpp
libsaliency/: Bounder.cpp  Bounder.h  Channels.cpp  Channels.hpp  Gradienter.cpp  Gradienter.h  KernelDensityInfo.cpp  Makefile.am  PDFEstimate.cpp  PDFEstimate.hpp  Quantizer.cpp  Quantizer.h  SaliencyMath.cpp  SamplePool.cpp  SamplePool.h  Sampler.cpp  Sampler.h  Samples.h  Smoother.cpp  Smoother.h  constants.h  libsaliency.cpp
